# SARA

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  Makefile  README.md  experiments.example.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  ci.yml.disabled  codeql.yml  codeql.yml.disabled
agent/: __init__.py  graph.py  state.py  tools.py
agent/prompts/: __init__.py  chain_of_thought.py  react.py  zero_shot.py
analysis/: __init__.py  aggregate.py  load_runs.py  stats.py  synthetic.py
analysis/notebooks/: 01_outcome_omnibus.ipynb  02_outcome_pairwise.ipynb  03_time_cost_omnibus.ipynb  04_time_cost_pairwise.ipynb  05_success_intervals.ipynb  06_failure_mode_crosstab.ipynb  07_strategy_effect.ipynb  README.md
backends/: __init__.py  anthropic_backend.py  base.py  google_backend.py  lmstudio_backend.py  openai_backend.py  pricing.py  pricing.yaml  registry.py
corpus/: README.md  manifest.yaml
corpus/exploits/: README.md
corpus/scripts/: __init__.py  build.py  fetch.py  verify.py
corpus/scripts/cb-multios/: Dockerfile  README.md  build.sh  build_targets.sh
docs/: ARCHITECTURE.md  INFRASTRUCTURE_PLAN.md  README.md  REPLICATION_SNAPSHOT.md  REPRODUCTION.md  SARA_DEVELOPMENT_HISTORY.md  SCHEMA_MIGRATIONS.md
docs/adr/: 0001-use-langgraph.md  0002-validator-boundary.md  0003-chain-fingerprint.md  0004-ghidra-bridge.md  0005-backend-categories.md  0006-disable-ci-workflows-for-public-release.md  0007-pricing-source-and-provenance.md  0008-filebytes-py314-and-binary-tools.md
harness/: __init__.py  cli.py  corpus.py  matrix.py  persistence.py  record.py  runner.py
infra/: README.md
infra/packer/: README.md  sara-lab.pkr.hcl  variables.pkr.hcl
infra/packer/provision/: install-base.sh  install-tools.sh  setup-experimenter.sh
infra/terraform/: README.md  lab.tfvars.example  main.tf  main.tf.placeholder  outputs.tf  outputs.tf.placeholder  variables.tf  variables.tf.placeholder
mcp_servers/gdb/: README.md  __init__.py  server.py
mcp_servers/ghidra/: README.md  __init__.py  server.py
mcp_servers/pwntools/: README.md  __init__.py  server.py
mcp_servers/radare2/: README.md  __init__.py  server.py
mcp_servers/ropgadget/: README.md  __init__.py  parser.py  server.py
mcp_servers/ropper/: README.md  __init__.py  server.py
scripts/: README.md  bootstrap.sh  build_replication_snapshot.sh  doctor.sh  refresh_pricing.py  verify_snapshot.sh
tests/: conftest.py  strategies.py  test_agent_graph.py  test_agent_graph_integration.py  test_agent_tools.py  test_aggregate.py  test_backends.py  test_cli.py  test_corpus_build.py  test_fake_backend.py  test_fixtures_are_valid.py  test_gdb_server.py  test_ghidra_server.py  test_harness_runner.py  test_load_runs.py  test_matrix.py  test_notebooks.py  test_persistence.py  test_pricing.py  test_provider_backends.py  test_pwntools_server.py  test_radare2_server.py  test_record_schema.py  test_record_schema_properties.py  test_ropgadget_integration.py  test_ropgadget_parser.py  test_ropper_server.py  test_smoke_e2e.py  test_stats.py  test_synthetic.py  test_validator_classifier.py  test_validator_runner.py
tests/fakes/: __init__.py  backend.py
tests/fakes/cassettes/: enumerate_then_refuse.jsonl
tests/fixtures/binaries/: README.md  build.sh  chain.json  exploit.py  sample_overflow  sample_overflow.c  sample_overflow.sha256
tests/fixtures/run_records/: failure_budget_exhausted.json  failure_hallucinated_gadget.json  failure_timeout.json  known_rediscovery.json  new_discovery.json  safeguard_refusal.json
validator/: README.md  __init__.py  classifier.py  runner.py  runner_test_helpers.py
